--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -86,7 +86,7 @@ h4 {
 <h4>Editor: {{info.editorname}}</h4><br>
 <h4>Clinic: {{info.clinname}}</h4><br>
 <h4>Organization: {{info.orgname}}</h4><br>
-<h4>Location: {info.location}}</h4><br>
+<h4>Location: {{info.location}}</h4><br>
 
 <blockquote>
 <p>{{info.overview}}</p>
