--- a/carezoom_frontend/templates/innovatorSingle.html
+++ b/carezoom_frontend/templates/innovatorSingle.html
@@ -82,7 +82,7 @@ h4 {
 
 <h2 style="font-size: 3em; text-align: left">{{info.name}}</h2>
 <br>
-
+<div class="profile-img"><img src="{{i.imageurl}}"/></div>
 <h4>Title: {{info.title}}</h4><br>
 <h4>Institution: {{info.institution}}</h4><br>
 
