--- a/carezoom_frontend/templates/recipes.html
+++ b/carezoom_frontend/templates/recipes.html
@@ -134,11 +134,11 @@ h4{
 
   				<h2><input type="submit" name="sub" value= "{{r.title}}" ></input></h2>
 			</form>
-    		<form action="/intervention" method="post">
+    		<form action="/innovator" method="post">
 
           <h2><input type="submit" name="sub" value= "{{r.innovname}}" ></input></h2>
       </form>
-      
+
       <h4>{{r.innovname}}</h4>
       <h4>{{r.editorname}}</h4>
 			<h4>{{r.overview}}</h4> </div>
