--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -70,8 +70,31 @@ h2 {
 h4 {
 	font-style: italic;
 }
-
-
+input[type=submit] {
+    width: 80%;
+    background-color: #f2e2e1;
+    color: black;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center
+}
+input[type=submitsmall] {
+    width: 100%;
+    background-color: #f2e2e1;
+    color: black;
+    padding: 7px 10px;
+    margin: 4px 0;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    text-align: center
+}
+input[type=submit]:hover {
+    background-color: #f2e2e1;
+}
 
 
 </style>
@@ -87,7 +110,7 @@ h4 {
 <h4>Clinic: {{info.clinname}}</h4><br>
 <h4>Organization: {{info.orgname}}</h4><br>
 <h4>Location: {{info.location}}</h4><br>
-
+<br>
 <blockquote>
 <p>{{info.overview}}</p>
 </blockquote>
