--- a/carezoom_frontend/templates/innovatorSingle.html
+++ b/carezoom_frontend/templates/innovatorSingle.html
@@ -81,6 +81,7 @@ h4 {
 <h4>title {{title}} and {{info}}</h4>
 
   {% for r in info %}
+    <h3>{{r.name}}</h3>
     {% if r.name == title %}
 
     <h2 style="font-size: 3em; text-align: left">{{r.name}}</h2>
