--- a/carezoom_frontend/templates/innovatorSingle.html
+++ b/carezoom_frontend/templates/innovatorSingle.html
@@ -78,11 +78,12 @@ h4 {
 
 
 <article>
-<h4>title {{title}} and {{info}}</h4>
+<h3>title {{title}} </h3><br> <h3>and {{info}}</h3>
 
   {% for r in info %}
     <h3>{{r.name}}</h3>
     {% if r.name == title %}
+    <h3>true</h3>
 
     <h2 style="font-size: 3em; text-align: left">{{r.name}}</h2>
     <br>
