--- a/carezoom_frontend/templates/recipes.html
+++ b/carezoom_frontend/templates/recipes.html
@@ -45,6 +45,7 @@
   color:white;
 }
 
+
 h3 {
     display: inline;
     font-size: 1em;
@@ -131,7 +132,7 @@ h4{
   {% for r in entries %}
     {% if not r.title == 'Title' %}
 
-  		<div class="flower" style="width:950px; text-align: center"" data_id="{{r.title}}" data-category="{{r.filter}}">
+  		<div class="flower" style="width:950px; height:200px; text-align: center"" data_id="{{r.title}}" data-category="{{r.filter}}">
     		<form action="/intervention" method="post">
           <h2><input type="submit" name="sub" value= "{{r.title}}" ></input></h2>
 			   </form>
