--- a/carezoom_frontend/templates/recipes.html
+++ b/carezoom_frontend/templates/recipes.html
@@ -136,7 +136,7 @@ h4{
     		<form action="/intervention" method="post">
           <h2><input type="submit" name="sub" value= "{{r.title}}" ></input></h2>
 			   </form>
-    	<h4 style="color:white"><a href="{{ url_for('innovator', title=r.innovname) }}">{{r.innovname}}</a><h4>
+    	<h4><a href="{{ url_for('innovator', title=r.innovname) }}" style="color:white; padding:0">{{r.innovname}}</a><h4>
       <h4>{{r.editorname}}</h4>
 			<h4>{{r.overview}}</h4> 
       </div>
@@ -146,6 +146,7 @@ h4{
   {% endfor %}
 </div>
 </div>
+
   
 
 
