--- a/carezoom_frontend/templates/index.html
+++ b/carezoom_frontend/templates/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <h1>CareZoom</h1>
+<img src="https://lh4.googleusercontent.com/Tqm2B5J3kx6MbRA3ymycNbcWCA8YXEfA-FG2Wpkion2nmyRdTSJopmwNSdxhzbwUwVSES6O7Tm2sI0gI7t6lVghXpJ3UGhXqs4sB3ikyCTJHIq6_dMkxN-3oceXw69I4DwpG46Z_">    
   <div class="w3-container">
 
             <nav class="navbar navbar-default">
@@ -33,7 +34,7 @@
                     </div>
                     
                 </div>
-                
+                <img src="https://lh3.googleusercontent.com/ElVj59S8w4yUI7tPDZMVWcbrx6Qw53lyLjDg6AGt58Kb27ERjym6K_LNUvq-C5xCZLgc8BMR1mbTbt5tRl8yN8HrJN5irsJBXHqVlmYJrbyePbhMbIGjLAZ0qmbRbhUXipeRzpP2">
                 <div class="collapse navbar-collapse" id="navbar">
                             <center><ul class="nav navbar-nav">
                                 <li><a href="{{ url_for('home') }}">Home</a></li>
