--- a/carezoom_frontend/templates/index.html
+++ b/carezoom_frontend/templates/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <h1>CareZoom</h1>
-<img src="https://lh4.googleusercontent.com/Tqm2B5J3kx6MbRA3ymycNbcWCA8YXEfA-FG2Wpkion2nmyRdTSJopmwNSdxhzbwUwVSES6O7Tm2sI0gI7t6lVghXpJ3UGhXqs4sB3ikyCTJHIq6_dMkxN-3oceXw69I4DwpG46Z_">    
+<img src="https://lh4.googleusercontent.com/Tqm2B5J3kx6MbRA3ymycNbcWCA8YXEfA-FG2Wpkion2nmyRdTSJopmwNSdxhzbwUwVSES6O7Tm2sI0gI7t6lVghXpJ3UGhXqs4sB3ikyCTJHIq6_dMkxN-3oceXw69I4DwpG46Z_" style="width:100%">    
   <div class="w3-container">
 
             <nav class="navbar navbar-default">
@@ -34,8 +34,8 @@
                     </div>
                     
                 </div>
-                <img src="https://lh3.googleusercontent.com/ElVj59S8w4yUI7tPDZMVWcbrx6Qw53lyLjDg6AGt58Kb27ERjym6K_LNUvq-C5xCZLgc8BMR1mbTbt5tRl8yN8HrJN5irsJBXHqVlmYJrbyePbhMbIGjLAZ0qmbRbhUXipeRzpP2">
                 <div class="collapse navbar-collapse" id="navbar">
+                    <img src="https://lh3.googleusercontent.com/ElVj59S8w4yUI7tPDZMVWcbrx6Qw53lyLjDg6AGt58Kb27ERjym6K_LNUvq-C5xCZLgc8BMR1mbTbt5tRl8yN8HrJN5irsJBXHqVlmYJrbyePbhMbIGjLAZ0qmbRbhUXipeRzpP2">
                             <center><ul class="nav navbar-nav">
                                 <li><a href="{{ url_for('home') }}">Home</a></li>
                                 <li><a href="{{ url_for('recipes') }}">Recipes</a></li>
@@ -45,7 +45,7 @@
                                 <li><a href="{{ url_for('innovators') }}">Innovators</a></li>
                                 <li><a href="{{ url_for('team') }}">Meet the Team</a></li>
                             </ul></center>
-                            
+                            <img src="https://lh3.googleusercontent.com/ElVj59S8w4yUI7tPDZMVWcbrx6Qw53lyLjDg6AGt58Kb27ERjym6K_LNUvq-C5xCZLgc8BMR1mbTbt5tRl8yN8HrJN5irsJBXHqVlmYJrbyePbhMbIGjLAZ0qmbRbhUXipeRzpP2">
 
                     </div>
 
