--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -79,7 +79,7 @@ h4 {
 <article>
 
 
-<h2 style="font-size: 3em; text-align: left">{{info.title}}</h2>
+<h2 style="font-size: 3em; text-align: center">{{info.title}}</h2>
 <br>
 <h4>Innovator: {{info.innovname}}</h4><br>
 <h4>Editor: {{info.editorname}}</h4><br>
