--- a/carezoom_frontend/templates/index.html
+++ b/carezoom_frontend/templates/index.html
@@ -45,6 +45,7 @@
                                 <li><a href="https://docs.google.com/a/college.harvard.edu/forms/d/1w5wF_ZVhXIxebCa3ftFs4AcCWc9rhf5i-1t_A8X7ljI/edit?usp=drive_web" target="_blank">Microconsulting</a></li>
                                 <li><a href="{{ url_for('innovators') }}">Innovators</a></li>
                                 <li><a href="{{ url_for('team') }}">Meet the Team</a></li>
+                                <li><a href="{{ url_for('advisors') }}">Advisors</a></li>
                                 <li><img src="https://lh3.googleusercontent.com/ElVj59S8w4yUI7tPDZMVWcbrx6Qw53lyLjDg6AGt58Kb27ERjym6K_LNUvq-C5xCZLgc8BMR1mbTbt5tRl8yN8HrJN5irsJBXHqVlmYJrbyePbhMbIGjLAZ0qmbRbhUXipeRzpP2" style="height:50px"></li>
                             </ul></center>
                            
