--- a/carezoom_frontend/templates/innovatorList.html
+++ b/carezoom_frontend/templates/innovatorList.html
@@ -51,7 +51,7 @@ input[type=submit]:hover {
                     <div class="profile-img"><img src="{{i.imageurl}}"/></div>
                 </div>
                 <div class="profile-teaser-main">
-                    <h3><a href="{{ url_for('innovator', title=r.innovname) }}" >{{r.innovname}}</a></h3>
+                    <h3><a href="{{ url_for('innovator', title=i.innovname) }}" >{{i.innovname}}</a></h3>
                     <div class="profile-info" style="width: 95%">
                         <div class="info"><span class="">Institution:</span> {{i.institution}}</div> <br>
                         <div class="info" style="text-align: justify;"><span class="">Bio:</span> {{i.bio}}</div>
