--- a/carezoom_frontend/templates/innovatorList.html
+++ b/carezoom_frontend/templates/innovatorList.html
@@ -52,7 +52,7 @@ input[type=submit]:hover {
                 </div>
                 <div class="profile-teaser-main">
                     <h2 class="profile-name">
-                    <a href="{{ url_for('innovator', title=i.innovname) }}" >{{i.innovname}}</a>
+                    <a href="google.com" >{{i.innovname}}</a>
                 </h2>
                     <div class="profile-info" style="width: 95%">
                         <div class="info"><span class="">Institution:</span> {{i.institution}}</div> <br>
