--- a/carezoom_frontend/templates/innovatorList.html
+++ b/carezoom_frontend/templates/innovatorList.html
@@ -53,9 +53,9 @@ input[type=submit]:hover {
                     </a>
                 </div>
                 <div class="profile-teaser-main">
-                    
+                    <h2 class="profile-name">
+                    {{i.name}}</h2>
                     <div class="profile-info" style="width: 95%">
-                        <div class="info"><span class="">Title:</span> {{i.title}}</div> <br>
                         <div class="info"><span class="">Institution:</span> {{i.institution}}</div> <br>
                         <div class="info" style="text-align: justify;"><span class="">Bio:</span> {{i.bio}}</div>
                     </div>
