--- a/carezoom_frontend/templates/advisors.html
+++ b/carezoom_frontend/templates/advisors.html
@@ -45,7 +45,7 @@ input[type=submit]:hover {
 <div class="container">
   <div class="row">
     <center><div class="list-group" style="width: 80%">
-      {% for i in innovatorsAll %}
+      {% for i in advisors %}
             <div class="list-group-item clearfix" style="background-color: #ba4444">
                 <div class="profile-teaser-left">
                     <div class="profile-img"><img src="{{i.imageurl}}"/></div>
