--- a/carezoom_frontend/templates/home.html
+++ b/carezoom_frontend/templates/home.html
@@ -36,7 +36,7 @@
             <br><br>
 
 
-<h2>FREQUENTLY ASKED QUESTIONS</h2>
+<h2>Frequently Asked Questions</h2>
 <div class="container" style="padding-right:150px; padding-left: 150px; text-align: left">
     <ul>
         <li>What is an innovation “recipe”?</li>
