--- a/carezoom_frontend/templates/innovatorList.html
+++ b/carezoom_frontend/templates/innovatorList.html
@@ -48,7 +48,7 @@ input[type=submit]:hover {
       {% for i in innovatorsAll %}
             <div class="list-group-item clearfix" style="background-color: #ba4444">
                 <div class="profile-teaser-left">
-                    <a href="{{ url_for('innovator', title=i.innovname) }}" >
+                    <a href="{{ url_for('innovator', title=r.innovname) }}" >
                     <div class="profile-img"><img src="{{i.imageurl}}"/></div>
                     </a>
                 </div>
@@ -56,6 +56,8 @@ input[type=submit]:hover {
                     <h2 class="profile-name">
                     {{i.name}}</h2>
                     <div class="profile-info" style="width: 95%">
+                        
+                        <div class="info"><span class="">Title:</span> {{i.title}}</div> <br>
                         <div class="info"><span class="">Institution:</span> {{i.institution}}</div> <br>
                         <div class="info" style="text-align: justify;"><span class="">Bio:</span> {{i.bio}}</div>
                     </div>
