--- a/carezoom_frontend/templates/advisors.html
+++ b/carezoom_frontend/templates/advisors.html
@@ -56,7 +56,7 @@ input[type=submit]:hover {
                     <input type="submit" name="sub" value= "{{i.name}}" ></input>
                     </form></h2>
                     <div class="profile-info" style="width: 95%">
-                        <div class="info"><span class="">Institution:</span> {{i.institution}}</div> <br>
+                        <div class="info"><span class="">Title:</span> {{i.title}}</div> <br>
                     </div>
                 </div>
             </div><br><br><!-- item -->
