--- a/carezoom_frontend/templates/recipes.html
+++ b/carezoom_frontend/templates/recipes.html
@@ -136,16 +136,16 @@ a {
 	<div class="flowers">
   {% for r in entries %}
     {% if not r.title == 'Title' %}
-
+    <div class="container" style="width: 50%">
   		<div class="flower" style="width:950px; height:200px; text-align: center"" data_id="{{r.title}}" data-category="{{r.filter}}">
     		<form action="/intervention" method="post">
-          <h2><input type="submit" name="sub" value= "{{r.title}}" ></input></h2>
+          <h3><input type="submit" name="sub" value= "{{r.title}}" ></input></h3>
 			   </form>
-    	<h4><a href="{{ url_for('innovator', title=r.innovname) }}" >{{r.innovname}}</a><h4>
+    	<h4><a href="{{ url_for('innovator', title=r.innovname) }}" >{{r.innovname}}</a></h4>
       <h4>{{r.editorname}}</h4>
 			<h4>{{r.overview}}</h4> 
       </div>
-
+    </div>
     {% endif %}
 
   {% endfor %}
