--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -75,7 +75,7 @@ h4 {
 
 </style>
 
-<h2 style="font-size: 3em; text-align: center">{{info.title}}</h2>
+<center><h2 style="font-size: 3em; text-align: center">{{info.title}}</h2></center>
 <article>
 
 
