--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -100,10 +100,8 @@ h4 {
 <div class="panel">
 	<h4>Tags</h4>
   {% set list1 = info.orgtypetag.split('§') %}
-  <ul>
-  {% for t in list1 %}
-  <li>t</li>
-{% endfor %}
+  <h4>list1</h4>
+  
 	<p>{{info.orgtypetag}}</p>
 	<h4>Text</h4>
   <p>{{info.orgtypetext}}</p>
