--- a/carezoom_frontend/templates/recipes.html
+++ b/carezoom_frontend/templates/recipes.html
@@ -142,6 +142,7 @@ a {
           <h4><input type="submit" name="sub" value= "{{r.title}}" ></input></h4>
 			   </form>
     	<h4><a href="{{ url_for('innovator', title=r.innovname) }}" >{{r.innovname}}</a></h4>
+      {{ url_for('innovator', title=r.innovname) }}
       <h4>{{r.editorname}}</h4>
 			<h4>{{r.overview}}</h4> 
       </div>
