--- a/carezoom_frontend/templates/innovatorSingle.html
+++ b/carezoom_frontend/templates/innovatorSingle.html
@@ -76,9 +76,11 @@ h2 {
 
 
 <article>
-
+{{title}}
   {% for r in info %}
-
+}
+}
+{{r.name}}
     {% if r.name == title %}
     <h2 style="font-size: 3em; text-align: left">{{r.name}}</h2>
     <br>
