--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -101,7 +101,7 @@ h4 {
 	<h4>Tags</h4>
 	<p>{{info.orgtypetag}}</p>
 	<h4>Text</h4>
-  <p>{{info.orgtypetext}}</p>
+  <p>{{info.orgtypetext| safe}}</p>
   <h4>Macro Trends</h4>
   <p>{{info.orgcontextmacro}}</p>
   <h4>Context</h4>
