--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -103,7 +103,7 @@ h4 {
 	<h4>Text</h4>
   <p>{{info.orgtypetext| safe}}</p>
   <h4>Macro Trends</h4>
-  <p>{{info.orgcontextmacro}}</p>
+  <p>{{info.orgcontextmacro |safe }}</p>
   <h4>Context</h4>
   <p>{{info.orgcontextleader}}</p>
 </div>
