--- a/carezoom_frontend/templates/results.html
+++ b/carezoom_frontend/templates/results.html
@@ -122,75 +122,80 @@ article > flowers-wraps {
 <h2 style="text-align:center">Search Results</h2><br>
 <pre id=result> </pre>
 <article>
-
 <div class="flowers-wrap" style="grid-column: 2">
   	<br><br>
   <button class="accordion"><h3> Intervention Budget</h3></button>
   <div class="panel">
   <form>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-colour" value="$0-500" id="$0-500" /> $0-500</label>
+      <input type="checkbox" name="fl-colour" value="1" id="$0-500" /> $0-500</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-colour" value="$500-1000" id="$500-1000" /> $500-1000</label>
+      <input type="checkbox" name="fl-colour" value="2" id="$500-1000" /> $500-1000</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-colour" value="$1K to 5K" id="$1K to 5K" /> $1K to 5K</label>
+      <input type="checkbox" name="fl-colour" value="3" id="$1K to 5K" /> $1K to 5K</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-colour" value="$5K to 10K" id="$5K to 10K" /> $5K to 10K</label>
+      <input type="checkbox" name="fl-colour" value="4" id="$5K to 10K" /> $5K to 10K</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-colour" value="$10K to 25K" id="$10K to 25K" /> $10K to 25K</label>
+      <input type="checkbox" name="fl-colour" value="5" id="$10K to 25K" /> $10K to 25K</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-colour" value="$25K to 50K" id="$25K to 50K" /> $25K to 50K</label>
+      <input type="checkbox" name="fl-colour" value="6" id="$25K to 50K" /> $25K to 50K</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-colour" value="$50K to 100K" id="$50K to 100K" /> $50K to 100K</label>
+      <input type="checkbox" name="fl-colour" value="7" id="$50K to 75K" /> $50K to 75K</label>
+      <br>
+     <label style="font-size:12px;">
+      <input type="checkbox" name="fl-colour" value="8" id="$75K to 100K" /> $75K to 100K</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-colour" value="$100K to 500K" id="$100K to 500K" /> $100K to 500K</label>
+      <input type="checkbox" name="fl-colour" value="9" id="$100K to 500K" /> $100K to 500K</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-colour" value="$500K to 1M" id="$500K to 1M" /> $500K to 1M</label>
+      <input type="checkbox" name="fl-colour" value="10" id="$500K to 1M" /> $500K to 1M</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-colour" value=">$1M" id=">$1M" /> >$1M</label>
+      <input type="checkbox" name="fl-colour" value="11" id=">$1M" /> >$1M</label>
   </form> </div>
 
   <button class="accordion"><h3> Type of organization</h3></button>
   <div class="panel">
   <form>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="Academic Hospital" id="Academic Hospital" /> Academic Hospital</label>
+      <input type="checkbox" name="fl-size" value="achosp" id="Academic Hospital" /> Academic Hospital</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="Integrated healthcare system/network" id="Integrated healthcare system/network" /> Integrated healthcare system/network</label>
+      <input type="checkbox" name="fl-size" value="intsyst" id="Integrated healthcare system/network" /> Integrated healthcare system/network</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="Community" id="Community" /> Community Hospital</label>
+      <input type="checkbox" name="fl-size" value="commhosp" id="Community" /> Community Hospital</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="Community outpatient clinic" id="Community outpatient clinic" /> Community outpatient clinic</label>
+      <input type="checkbox" name="fl-size" value="commclinic" id="Community outpatient clinic" /> Community outpatient clinic</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="Community health center" id="Community health center" /> Community health center</label>
+      <input type="checkbox" name="fl-size" value="CHC" id="Community health center" /> Community health center</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="Home-based care" id="Home-based care" /> Home-based care</label>
+      <input type="checkbox" name="fl-size" value="homecare" id="Home-based care" /> Home-based care</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="Subacute rehab" id="Subacute rehab" /> Subacute rehab</label>
+      <input type="checkbox" name="fl-size" value="subacute" id="Subacute rehab" /> Subacute rehab</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="Skilled nursing facility" id="Skilled nursing facility" /> Skilled nursing facility</label>
+      <input type="checkbox" name="fl-size" value="skillednurs" id="Skilled nursing facility" /> Skilled nursing facility</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="Urgent care" id="Urgent care" /> Urgent care</label>
+      <input type="checkbox" name="fl-size" value="urgcare" id="Urgent care" /> Urgent care</label>
        <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="Community organization" id="Community organization" /> Community organization</label>
+      <input type="checkbox" name="fl-size" value="commorg" id="Community organization" /> Community organization</label>
+      <br>
+    <label style="font-size:12px;">
+      <input type="checkbox" name="fl-size" value="safety" id="Community organization" /> Safety Net Hospital</label>
   </form>
 </div>
 
@@ -198,34 +203,37 @@ article > flowers-wraps {
   <div class="panel">
   <form>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="tiny" id="tiny" /> Epic</label>
+      <input type="checkbox" name="fl-size" value="Epic" id="Epic" /> Epic</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="small" id="small" /> Cerner</label>
+      <input type="checkbox" name="Cerner" value="Cerner" id="small" /> Cerner</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="medium" id="medium" /> ECW</label>
+      <input type="checkbox" name="ECW" value="ECW" id="medium" /> E-Clinical Works</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="large" id="large" /> Redcap</label>
+      <input type="checkbox" name="Redcap" value="Redcap" id="large" /> Redcap</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> Microsoft Office</label>
+      <input type="checkbox" name="Microsoft" value="Microsoft Office" id="Microsoft" /> Microsoft Office</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> iPads/Tablets</label>
+      <input type="checkbox" name="iPads" value="iPads" id="giant" /> iPads/Tablets</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> Paper and pen</label>
+      <input type="checkbox" name="Paper" value="Paper" id="Paper" /> Paper and pen</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> Tonic</label>
+      <input type="checkbox" name="Tonic" value="Tonic" id="Tonic" /> Tonic</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> Athena Health</label>
+      <input type="checkbox" name="Desktop" value="Desktop" id="Desktop" /> Desktops</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> Desktops/label>
+      <input type="checkbox" name="registry" value="registry" id="registry" /> EMR-based registry</label>
+      <br>
+    <label style="font-size:12px;">
+      <input type="checkbox" name="EMR" value="EMR" id="EMR" /> Electronic medical record</label>
   </form>
 </div>
 
@@ -234,13 +242,13 @@ article > flowers-wraps {
   <p style="font-size:12px;"><strong>Filter flowers by size:</strong></p>
   <form>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="tiny" id="tiny" /> Suburb</label>
+      <input type="checkbox" name="suburb" value="suburb" id="suburb" /> Suburb</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="small" id="small" /> Urban</label>
+      <input type="checkbox" name="urban" value="urban" id="urban" /> Urban</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="medium" id="medium" /> Rurual</label>
+      <input type="checkbox" name="rural" value="rural" id="rural" /> Rural</label>
   </form>
 </div>
 
@@ -248,19 +256,19 @@ article > flowers-wraps {
   <div class="panel">
   <form>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="tiny" id="tiny" /> Immigrants</label>
+      <input type="checkbox" name="immigrants" value="immigrants" id="immigrants" /> Immigrants</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="small" id="small" /> Rural</label>
+      <input type="checkbox" name="rural" value="rural" id="rural" /> Rural</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="medium" id="medium" /> Upper middle class/wealthy</label>
+      <input type="checkbox" name="upper" value="upper" id="upper" /> Upper middle class/wealthy</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="large" id="large" /> Working class</label>
+      <input type="checkbox" name="working" value="working" id="working" /> Working class</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> Women</label>
+      <input type="checkbox" name="women" value="women" id="women" /> Women</label>
   </form>
 </div>
 
@@ -268,13 +276,13 @@ article > flowers-wraps {
   <div class="panel">
   <form>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="tiny" id="tiny" /> Medicaid</label>
+      <input type="checkbox" name="Medicaid" value="Medicaid" id="Medicaid" /> Medicaid</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="small" id="small" /> Medicare</label>
+      <input type="checkbox" name="Medicare" value="Medicare" id="Medicare" /> Medicare</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="medium" id="medium" /> Commercial/private</label>
+      <input type="checkbox" name="commercial" value="commercial" id="commercial" /> Commercial/private</label>
   </form>
 </div>
 
@@ -282,37 +290,43 @@ article > flowers-wraps {
   <div class="panel">
   <form>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="tiny" id="tiny" /> MD/DO</label>
+      <input type="checkbox" name="MD/DO" value="MD/DO" id="MD/DO" /> Physicians</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="small" id="small" /> RN</label>
+      <input type="checkbox" name="RNs" value="RNs" id="RNs" /> RNs</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="medium" id="medium" /> LPN</label>
+      <input type="checkbox" name="LPNs" value="LPNs" id="LPNs" /> LPNs</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="large" id="large" /> NP</label>
+      <input type="checkbox" name="NPs" value="NPs" id="NPs" /> NPs</label>
     <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> PA</label>
+      <input type="checkbox" name="PAs" value="PAs" id="PAs" /> PAs</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> PT/OT</label>
+      <input type="checkbox" name="PT" value="PT" id="PT" /> PT</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> Social Worker</label>
+      <input type="checkbox" name="OT" value="OT" id="OT" /> OT</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> Pharmacist</label>
+      <input type="checkbox" name="SW" value="SW" id="SW" /> Social Worker</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> Students</label>
+      <input type="checkbox" name="Pharm" value="Pharm" id="Pharm" /> Pharmacist</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> Community Health worker</label>
+      <input type="checkbox" name="Trainee" value="Trainee" id="Trainee" /> Clicial Trainee or Student</label>
       <br>
     <label style="font-size:12px;">
-      <input type="checkbox" name="fl-size" value="giant" id="giant" /> Administrative assistant/project manager</label>
+      <input type="checkbox" name="CHW" value="CHW" id="CHW" /> Community Health worker</label>
+      <br>
+      <label style="font-size:12px;">
+      <input type="checkbox" name="Pophealth" value="Pophealth" id="Pophealth" /> Population Health Coordinator</label>
+      <br>
+    <label style="font-size:12px;">
+      <input type="checkbox" name="AA" value="AA" id="AA" /> Administrative assistant</label>
   </form>
 </div>
 <button class="accordion"><h3> PCMH</h3></button>
